--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!--NAV START-->
     <nav class="navbar navbar-expand-lg bg-body-none">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Monthly Website Gallery</a>
@@ -87,11 +89,21 @@
         </div>
       </div>
     </nav>
+    <!--NAV END-->
 
-    <div class="row">
-      <div class="col-sm-2"></div>
-      <div class="col-sm-8"></div>
-      <div class="col-sm-2"></div>
+    <div class="container">
+      <!--Header Section-->
+      <!--Hero START-->
+      <div class="row m-3">
+        <div class="col-12 p-5 text-center rounded-3 bg-hero-image">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <div class="text-white">
+                    <h1 class="mb-3">Monthly Website Gallery</h1>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!--Hero END-->
     </div>
 
     <script
