--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--NAV START-->
@@ -96,11 +96,11 @@
       <!--Hero START-->
       <div class="row m-3">
         <div class="col-12 p-5 text-center rounded-3 bg-hero-image">
-            <div class="d-flex justify-content-center align-items-center h-100">
-                <div class="text-white">
-                    <h1 class="mb-3">Monthly Website Gallery</h1>
-                </div>
+          <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="text-white">
+              <h1 class="mb-3">Monthly Website Gallery</h1>
             </div>
+          </div>
         </div>
       </div>
       <!--Hero END-->
