added description and finished header

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
     <!--NAV END-->
 
     <div class="container">
-      <!--Header Section-->
-      <!--Hero START-->
+      <!-- Header START -->
       <div class="row m-3">
+        <!--Hero START-->
         <div class="col-12 p-5 text-center rounded-3 bg-hero-image">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
@@ -102,8 +102,18 @@
             </div>
           </div>
         </div>
+        <!--Hero END-->
       </div>
-      <!--Hero END-->
+      <!-- Header END -->
+
+      <!-- Description START -->
+      <div class="col-12 my-3 p-3 text-center rounded-3 border">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, aut
+        non laborum necessitatibus saepe cumque, dolorum sapiente, illum
+        pariatur nisi deserunt suscipit quod magnam. Eius voluptate placeat
+        facere sequi similique!
+      </div>
+      <!-- Description END -->
     </div>
 
     <script
