added some gallery items

--- a/index.html
+++ b/index.html
@@ -108,12 +108,72 @@
 
       <!-- Description START -->
       <div class="col-12 my-3 p-3 text-center rounded-3 border">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, aut
-        non laborum necessitatibus saepe cumque, dolorum sapiente, illum
-        pariatur nisi deserunt suscipit quod magnam. Eius voluptate placeat
-        facere sequi similique!
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis,
+          aut non laborum necessitatibus saepe cumque, dolorum sapiente, illum
+          pariatur nisi deserunt suscipit quod magnam. Eius voluptate placeat
+          facere sequi similique!
+        </p>
       </div>
       <!-- Description END -->
+
+      <!-- Gallery START -->
+      <div class="row m-3">
+        <!-- November -->
+        <div class="card col-12 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- November END -->
+
+        <!-- December -->
+        <div class="card col-12 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- December END -->
+
+        <!-- January -->
+        <div class="card col-12 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- January END -->
+      </div>
+      <!-- Gallery END -->
     </div>
 
     <script
