coded most of gallery

--- a/index.html
+++ b/index.html
@@ -102,32 +102,34 @@
       <!-- Header START -->
       <div class="row m-3">
         <!--Hero START-->
-        <div class="col-12 p-5 text-center rounded-3 bg-hero-image">
+        <div class="col-12 col-lg-6 p-5 text-center rounded-3 bg-hero-image">
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
-              <h1 class="mb-3">Monthly Website Gallery</h1>
+              <h1 class="m-3">Monthly Website Gallery</h1>
             </div>
           </div>
         </div>
         <!--Hero END-->
+
+        <!-- Description START -->
+        <div
+          class="col-12 col-lg-6 my-3 my-lg-0 p-3 text-center align-middle rounded-3 border"
+        >
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis,
+            aut non laborum necessitatibus saepe cumque, dolorum sapiente, illum
+            pariatur nisi deserunt suscipit quod magnam. Eius voluptate placeat
+            facere sequi similique!
+          </p>
+        </div>
+        <!-- Description END -->
       </div>
       <!-- Header END -->
-
-      <!-- Description START -->
-      <div class="col-12 my-3 p-3 text-center rounded-3 border">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis,
-          aut non laborum necessitatibus saepe cumque, dolorum sapiente, illum
-          pariatur nisi deserunt suscipit quod magnam. Eius voluptate placeat
-          facere sequi similique!
-        </p>
-      </div>
-      <!-- Description END -->
 
       <!-- Gallery START -->
       <div class="row m-3">
         <!-- November -->
-        <div class="card col-12 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -145,7 +147,7 @@
         <!-- November END -->
 
         <!-- December -->
-        <div class="card col-12 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -163,7 +165,7 @@
         <!-- December END -->
 
         <!-- January -->
-        <div class="card col-12 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -179,6 +181,60 @@
           </div>
         </div>
         <!-- January END -->
+
+        <!-- February -->
+        <div class="card col-12 col-lg-4 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- February END -->
+
+        <!-- March -->
+        <div class="card col-12 col-lg-4 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- March END -->
+
+        <!-- April -->
+        <div class="card col-12 col-lg-4 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- April END -->
       </div>
       <!-- Gallery END -->
     </div>
@@ -231,7 +287,7 @@
             style="background-color: #0082ca"
             href="#!"
             role="button"
-            ><i class="fab fa-linkedin-in"></i
+            ><i class="fab fa-microchip"></i
           ></a>
           <!-- Github -->
           <a
