--- a/index.html
+++ b/index.html
@@ -235,6 +235,43 @@
           </div>
         </div>
         <!-- April END -->
+
+        <!-- May -->
+        <div class="card col-12 col-lg-6 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- May END -->
+
+        <!-- June -->
+        <div class="card col-12 col-lg-6 p-0 mb-2">
+          <img
+            src="https://picsum.photos/600/400"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <!-- June END -->
+
       </div>
       <!-- Gallery END -->
     </div>
