--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!--NAV START-->
-    <nav class="navbar navbar-expand-lg bg-body-none">
+    <nav class="navbar navbar-expand-lg bg-body-none mynav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Monthly Website Gallery</a>
         <button
@@ -330,7 +330,7 @@
           <a
             class="btn text-white btn-floating m-1"
             style="background-color: #333333"
-            href="#!"
+            href="https://github.com/Gazzy21"
             role="button"
             ><i class="fab fa-github"></i
           ></a>
