--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!--NAV START-->
-    <nav class="navbar navbar-expand-lg bg-body-none mynav">
+    <nav class="navbar navbar-expand-lg bg-body-secondary mynav">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Monthly Website Gallery</a>
         <button
@@ -98,11 +98,20 @@
     </nav>
     <!--NAV END-->
 
+    <div class="background-container backgroundofthething">
+      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
+      <div class="stars"></div>
+      <div class="twinkling"></div>
+      <div class="clouds"></div>
+    </div>
+
     <div class="container">
       <!-- Header START -->
       <div class="row m-3">
         <!--Hero START-->
-        <div class="col-12 col-lg-6 p-5 text-center rounded-3 bg-hero-image">
+        <div
+          class="col-12 col-lg-6 p-5 text-center rounded-3 bg-hero-image myborder"
+        >
           <div class="d-flex justify-content-center align-items-center h-100">
             <div class="text-white">
               <h1 class="m-3">Monthly Website Gallery</h1>
@@ -113,7 +122,7 @@
 
         <!-- Description START -->
         <div
-          class="col-12 col-lg-6 my-3 my-lg-0 p-3 text-center align-middle rounded-3 border"
+          class="col-12 col-lg-6 my-3 my-lg-0 p-3 text-center align-middle rounded-3 myborder"
         >
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis,
@@ -129,25 +138,25 @@
       <!-- Gallery START -->
       <div class="row m-3">
         <!-- November -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
             alt="..."
           />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">"Look Ma, I'm Famous!"</h5>
             <p class="card-text">
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- November END -->
 
         <!-- December -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -159,13 +168,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- December END -->
 
         <!-- January -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -177,13 +186,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- January END -->
 
         <!-- February -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -195,13 +204,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- February END -->
 
         <!-- March -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -213,13 +222,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- March END -->
 
         <!-- April -->
-        <div class="card col-12 col-lg-4 p-0 mb-2">
+        <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -231,13 +240,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- April END -->
 
         <!-- May -->
-        <div class="card col-12 col-lg-6 p-0 mb-2">
+        <div class="card col-12 col-lg-6 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -249,13 +258,13 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- May END -->
 
         <!-- June -->
-        <div class="card col-12 col-lg-6 p-0 mb-2">
+        <div class="card col-12 col-lg-6 p-0 mb-2 myborder">
           <img
             src="https://picsum.photos/600/400"
             class="card-img-top"
@@ -267,11 +276,10 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-primary">Go</a>
           </div>
         </div>
         <!-- June END -->
-
       </div>
       <!-- Gallery END -->
     </div>
