some more customization

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
         <!-- Description START -->
         <div
-          class="col-12 col-lg-6 my-3 my-lg-0 p-3 text-center align-middle rounded-3 myborder"
+          class="col-12 col-lg-6 my-3 my-lg-0 p-3 text-center align-middle rounded-3 myborder bg-white"
         >
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis,
