--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -183,8 +182,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -201,8 +199,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -219,8 +216,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -237,8 +233,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -255,8 +250,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -273,8 +267,7 @@
           <div class="card-body">
             <h5 class="card-title">Coming Soon...</h5>
             <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
+              Soon to be created, please stay tuned!
             </p>
             <a href="#" class="btn btn-primary">Go</a>
           </div>
@@ -315,7 +308,7 @@
 
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2020 Copyright:
+        Nicholas Guzzone © 2023 Copyright:
         <a class="text-white" href="https://mdbootstrap.com/"
           >MDBootstrap.com</a
         >
