attempt at gutters

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <!-- Header END -->
 
       <!-- Gallery START -->
-      <div class="row m-3">
+      <div class="row g-3 m-3">
         <!-- November -->
         <div class="card col-12 col-lg-4 p-0 mb-2 myborder">
           <img
@@ -283,15 +283,6 @@
       <div class="container p-4 pb-0">
         <!-- Section: Social media -->
         <section class="mb-4">
-
-          <!-- Instagram -->
-          <a
-            class="btn text-white btn-floating m-1"
-            style="background-color: #ac2bac"
-            href="#!"
-            role="button"
-            ><i class="fab fa-instagram"></i
-          ></a>
 
           <!-- Github -->
           <a
